src/static/styles/app.css
/* ... */
input[type=checkbox]:checked {
    background-color: #000;
    border-left-color: #06F;
    border-right-color: #06F;
}

input[type=checkbox]:hover {
    box-shadow: 0px 0px 10px #1300ff;
}

input[type=radio] {
    display: none;
    background: none;
    border: 0;
    box-sizing: border-box;
    box-shadow: inset 0 0 0 2px var(--deckSelectionGreen);
    color: var(--deckSelectionGreen);
    font-size: inherit;
    font-weight: 700;
    margin: 1em;
    padding: 1em 2em;
    text-align: center;
    text-transform: capitalize;
    width: 100%;
    position: relative;
    vertical-align: middle;
}

input[type=radio]::before,
input[type=radio]::after {
    box-sizing: border-box;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
}

/** Class specific **/

/* Page display */

.panel {
    height: 100%;
    padding-left: 20px;
    padding-right: 20px;
    overflow-y: hidden;
}

.deck {
    width: 100%;
    margin-bottom: 5px;
    background: var(--backgroundColor);
    border: 2px solid var(--borderColor);
    border-top: 4px solid var(--borderColor);
    border-bottom: 4px solid var(--borderColor);
    border-radius: 30px;
    color: var(--deckSelectionGreen);
    overflow: hidden;
}

.deckContent {
    width: 100%;
    height: 90%;
    margin: 0px;
    overflow: hidden;
}

.card {
    background-color: var(--cardBackgroundColor);
    height: 100%;
    margin: 2px;
    border: 2px solid var(--borderColor);
    border-radius: 20px;
    cursor: pointer;
}

.card-title {
    color: #1abc9c;
}

.card-text {
    color: #8c9b9d;
}

/* Buttons */

svg {
    width: 30;
    height: 30;
}

.green-clickable {
    color: var(--splashGreen);
}

/* Tags */

span.tag {
    color: var(--splashGreen);
    background: white;
    margin-left: 2px;
    margin-right: 2px;
    padding-left: 6px;
    padding-right: 6px;
    padding-top: 1px;
    padding-bottom: 1px;
    border-radius: 16px;
    white-space: nowrap;
}

span.tag:hover .tag-remove {
    display: inline-block;
    line-height: 100%;
    height: 100%;
    font-size: 100%;
}

.tag-remove {
    padding: 0rem;
    vertical-align: unset;
    padding-left: 5px;
    display: none;
}

.tag-remove:focus {
    outline: none;
    box-shadow: none;
}

/* URLs */

.selected {
    border: 5px solid rgb(13, 255, 0);
}

.selectedURL {
    border: 5px solid rgb(13, 255, 0);
    transition: 250ms;
}

.URLString {
    width: 200px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis
}

.col-lg-10 {
    flex-grow: 1;
    transition: all 250ms ease;
}

.col-lg-4 {
    flex-shrink: 1;
    transition: all 250ms ease;
}

.col-xl-10 {
    flex-grow: 1;
    transition: all 250ms ease;
}

.col-xl-3 {
    flex-shrink: 1;
    transition: all 250ms ease;
}

/* Users */

span.user {
    color: var(--spanRemoveColor);
    background: white;
    margin-left: 2px;
    margin-right: 2px;
    padding-left: 6px;
    padding-right: 6px;
    padding-top: 1px;
    padding-bottom: 1px;
    border-radius: 16px;
    white-space: nowrap;
}

span.user:hover .user-remove {
    display: inline-block;
    line-height: 100%;
    height: 100%;
    font-size: 100%;
}

.user-remove {
    padding: 0rem;
    vertical-align: unset;
    padding-left: 5px;
    display: none;
}

.user-remove:focus {
    outline: none;
    box-shadow: none;
}

.close {
    cursor: pointer;
    display: flex;
}

.fa-arrow-down {
    transform: rotate(0deg);
    transition: transform 100ms linear;
}

.fa-arrow-down.open {
    transform: rotate(-90deg);
    transition: transform 100ms linear;
}

/* Icon 1 */

.animated-icon1,
.animated-icon2,
.animated-icon3 {
    width: 30px;
    height: 20px;
    position: relative;
    margin: 0px;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .5s ease-in-out;
    -moz-transition: .5s ease-in-out;
    -o-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    cursor: pointer;
}

.animated-icon1 span,
.animated-icon2 span,
.animated-icon3 span {
    display: block;
    position: absolute;
    height: 3px;
    width: 100%;
    border-radius: 9px;
    opacity: 1;
    left: 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .25s ease-in-out;
    -moz-transition: .25s ease-in-out;
    -o-transition: .25s ease-in-out;
    transition: .25s ease-in-out;
}

.animated-icon1 span {
    background: #e65100;
}

.animated-icon2 span {
    background: #e3f2fd;
}

.animated-icon3 span {
    background: #f3e5f5;
}

.animated-icon1 span:nth-child(1) {
    top: 0px;
}

.animated-icon1 span:nth-child(2) {
    top: 10px;
}

.animated-icon1 span:nth-child(3) {
    top: 20px;
}

.animated-icon1.open span:nth-child(1) {
    top: 11px;
    -webkit-transform: rotate(135deg);
    -moz-transform: rotate(135deg);
    -o-transform: rotate(135deg);
    transform: rotate(135deg);
}

.animated-icon1.open span:nth-child(2) {
    opacity: 0;
    left: -60px;
}

.animated-icon1.open span:nth-child(3) {
    top: 11px;
    -webkit-transform: rotate(-135deg);
    -moz-transform: rotate(-135deg);
    -o-transform: rotate(-135deg);
    transform: rotate(-135deg);
}

/* Icon 3*/

.animated-icon2 span:nth-child(1) {
    top: 0px;
}

.animated-icon2 span:nth-child(2),
.animated-icon2 span:nth-child(3) {
    top: 10px;
}

.animated-icon2 span:nth-child(4) {
    top: 20px;
}

.animated-icon2.open span:nth-child(1) {
    top: 11px;
    width: 0%;
    left: 50%;
}

.animated-icon2.open span:nth-child(2) {
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
}

.animated-icon2.open span:nth-child(3) {
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    transform: rotate(-45deg);
}
/* ... */

